fix contrast problem of text marble
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@55412 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
@@ -338,6 +338,10 @@ $duration: 0.2s;
 		.marble.elemShown {
 			background-color: $purple-default;
 			border: 1px solid $marble-border;
+			
+			.textOverMarble {
+				opacity: 1;	
+			}
 		}
 		
 		.scrollableTextBox,
